--- a/index.html
+++ b/index.html
@@ -1,13 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Name | Portfolio</title>
+  <style>
+    :root {
+      --bg-color: #121212;
+      --text-color: #f5f5f5;
+      --accent-color: #00bcd4;
+      --card-bg: #1e1e1e;
+      --border-color: #333;
+    }
+
+    body.light-mode {
+      --bg-color: #f9f9f9;
+      --text-color: #222;
+      --accent-color: #007acc;
+      --card-bg: #fff;
+      --border-color: #ddd;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background 0.3s, color 0.3s;
+    }
+
+    header {
+      background-color: var(--card-bg);
+      padding: 2rem 1rem 1rem;
+      text-align: center;
+      border-bottom: 1px solid var(--border-color);
+      position: relative;
+    }
+
+    nav a {
+      color: var(--accent-color);
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .toggle-btn {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: var(--accent-color);
+      transition: transform 0.2s;
+    }
+
+    .toggle-btn:hover {
+      transform: rotate(15deg);
+    }
+
+    .profile-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      margin-bottom: 1rem;
+    }
+
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid var(--accent-color);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    section {
+      padding: 2rem 1rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h2 {
+      border-bottom: 2px solid var(--border-color);
+      padding-bottom: 0.5rem;
+    }
+
+    .project {
+      margin: 1rem 0;
+      padding: 1rem;
+      background-color: var(--card-bg);
+      border-left: 5px solid var(--accent-color);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    a {
+      color: var(--accent-color);
+    }
+
+    footer {
+      background-color: var(--card-bg);
+      color: var(--text-color);
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+      border-top: 1px solid var(--border-color);
+    }
+  </style>
 </head>
 <body>
 
-    <h1>Hello World</h1>
-    
+  <header>
+    <button class="toggle-btn" id="modeToggle" onclick="toggleMode()" title="Toggle dark/light mode">🌙</button>
+
+    <div class="profile-container">
+      <img src="https://github.com/cdeang24.png" alt="Profile Picture" class="profile-pic" />
+      <div>
+        <h1>Christopher DeAngelis</h1>
+        <p>Web Developer | Designer | Creator</p>
+      </div>
+    </div>
+
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hello! I'm a passionate developer with experience in building websites and applications.
+      I enjoy working with modern technologies and constantly learning new things.
+      When I'm not coding, you'll probably find me exploring nature or reading a good book.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>Project One</h3>
+      <p>A brief description of what this project is about. You can mention the tech stack and what problem it solves.</p>
+      <p><a href="" target="_blank">View Project</a></p>
+    </div>
+
+    <div class="project">
+      <h3>Project Two</h3>
+      <p>Another project description goes here. Keep it short and to the point.</p>
+      <p><a href="" target="_blank">View on GitHub</a></p>
+    </div>
+
+  </section>
+
+  <footer>
+    <p>© 2025 Christopher DeAngelis. All rights reserved.</p>
+  </footer>
+
+  <script>
+    const toggleBtn = document.getElementById('modeToggle');
+
+    function toggleMode() {
+      document.body.classList.toggle('light-mode');
+      const isLight = document.body.classList.contains('light-mode');
+      toggleBtn.textContent = isLight ? '☀️' : '🌙';
+    }
+
+    // Load saved mode preference
+    window.addEventListener('load', () => {
+      const savedMode = localStorage.getItem('mode');
+      if (savedMode === 'light') {
+        document.body.classList.add('light-mode');
+        toggleBtn.textContent = '☀️';
+      }
+    });
+
+    // Save mode preference
+    toggleBtn.addEventListener('click', () => {
+      const isLight = document.body.classList.contains('light-mode');
+      localStorage.setItem('mode', isLight ? 'light' : 'dark');
+    });
+  </script>
 </body>
 </html>
