--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <div>
         <h1>Christopher DeAngelis</h1>
         <p>Software Engineer</p>
+        <nav>
+          <a href="#about">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#blog">Blog</a>
+        </nav>
       </div>
     </div>
-
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-    </nav>
   </header>
 
   <!-- About Section -->
@@ -44,32 +44,32 @@
 
     <div class="project">
       <div>
-        <h3>Mazejs</h3>
-        <p>A brief description of what this project is about. Tech stack and highlights go here.</p>
+        <h3>Old 3D Models</h3>
+        <p>These models were designed as part of a video game summer school program at my highschool.</p>
         <div class="tech-tags">
+          <span class="tech-tag">3DS Max</span>
           <span class="tech-tag">HTML</span>
-          <span class="tech-tag">CSS</span>
           <span class="tech-tag">JavaScript</span>
+          <span class="tech-tag">THREE.js</span>
         </div>
-        <a href="https://yourprojectlink.com" target="_blank">Live Demo</a> | 
-        <a href="https://github.com/yourusername/project-one" target="_blank">Source Code</a>
+        <a href="https://cdeang24.github.io/Old-3D-Models/" target="_blank">Live Demo</a> | 
+        <a href="https://github.com/cdeang24/Old-3D-Models" target="_blank">Source Code</a>
       </div>
       <img src="https://via.placeholder.com/200" alt="Project Thumbnail" />
+    </div>
+  </section>
+
+  <section id="blog" class="reveal">
+    <h2>Blog</h2>
+    
+    <div claSS="blog-post">
+      <a href="https://sites.google.com/view/algo-around-us-cdeangelis/home" target="_blank">
+        <img src="https://lh3.googleusercontent.com/-jlcRH2_zPQfzoiCTaGl5UML0poLz-TqU5CVQ8IODatETsMDt2ftxXRnievT4OiY3X74U-wECYt9_MQUeI-o9dmnN9ieg00Bs3yzG98IJVUxbb1TvU9dovZi6opQQDTaD2GitRdNwdCj-s5WVeji8Q0CQI33ZGo6dORt=w1280" alt="Blog Thumbnail" style="width:100%;">
+        <h3>Algorithms Around Us</h3>
+        <p>On the usage of predictive algorithms within US Policing.</p>
+      </a>
     </div>
 
-    <div class="project">
-      <div>
-        <h3>Project Two</h3>
-        <p>Another project description with what it does and why it's cool.</p>
-        <div class="tech-tags">
-          <span class="tech-tag">React</span>
-          <span class="tech-tag">Node.js</span>
-        </div>
-        <a href="https://yourprojectlink.com" target="_blank">Live Demo</a> | 
-        <a href="https://github.com/yourusername/project-two" target="_blank">Source Code</a>
-      </div>
-      <img src="https://via.placeholder.com/200" alt="Project Thumbnail" />
-    </div>
   </section>
 
   <footer>
